--- a/NodeFolio/nodeFolio/public/header/header.html
+++ b/NodeFolio/nodeFolio/public/header/header.html
@@ -12,7 +12,7 @@
         <nav>
             
             <ul>
-                    <a href="/"><img id="nav-logo" style="left:0px; float:left;" src="https://cdn.iconscout.com/icon/free/png-512/node-js-1174925.png"></a>
+                    <a href="/"><img id="nav-logo" style="text-align: center;" src="https://cdn.iconscout.com/icon/free/png-512/node-js-1174925.png"></a>
 
             <div id="nav-right-menu">
 
